<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".independent.Add"
                android:orientation="vertical"
                android:background="?attr/app_background">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/app_button"
            app:titleTextColor="?attr/app_button_text_color"
            app:title="Add task"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/etTask"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/task_hint"
                android:textSize="24sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="viewStart"
                android:textColorHint="?attr/app_hint"
                android:textColor="?attr/app_text"/>

        <TextView
                android:id="@+id/tvChosenStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_start_time"
                android:textColor="?attr/app_text"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

        <TextView
                android:id="@+id/tvChosenEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_end_time"
                android:textColor="?attr/app_text"
                android:layout_marginTop="24dp"
                android:layout_marginStart="10dp"
                android:textAlignment="viewStart"
                android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            style="?android:attr/buttonBarStyle">

        <Button
                android:id="@+id/btExitAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/app_button"
                android:textColor="?attr/app_button_text_color"
                android:text="@string/exit"
                style="?android:attr/buttonBarButtonStyle"/>

        <Button
                android:id="@+id/btMin1Day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/app_button"
                android:textColor="?attr/app_button_text_color"
                android:text="@string/pre_day"
                style="?android:attr/buttonBarButtonStyle"/>

        <Button
                android:id="@+id/btPlus1Day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/app_button"
                android:textColor="?attr/app_button_text_color"
                android:text="@string/next_day"
                style="?android:attr/buttonBarButtonStyle"/>

        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btCreate"
                android:background="?attr/app_button"
                android:textColor="?attr/app_button_text_color"
                android:text="@string/save"
                style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
