<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".independent.Settings"
                android:background="?attr/app_background">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="36sp"
                android:textColor="?attr/app_text"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"/>

        <Button
                android:id="@+id/btSettingsTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_theme"
                android:textSize="24sp"
                android:textAlignment="viewStart"
                android:textColor="?attr/app_button_text_color"
                android:layout_marginTop="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="?attr/app_button"/>

        <Button
                android:id="@+id/btSettingsFormats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_format"
                android:textSize="24sp"
                android:textAlignment="viewStart"
                android:textColor="?attr/app_button_text_color"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="?attr/app_button"/>

        <Button
                android:id="@+id/btSettingsBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_backup"
                android:textSize="24sp"
                android:textAlignment="viewStart"
                android:textColor="?attr/app_button_text_color"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="?attr/app_button"/>

    </LinearLayout>

</RelativeLayout>