<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.apps.a7pl4y3r.yourweek.independent.AddAlarm"
        android:background="?attr/app_background">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/app_button"
            app:titleTextColor="?attr/app_button_text_color"
            app:title="Add alarm"/>

    <EditText
            android:id="@+id/etAddAlarm"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/alarm_hint"
            android:inputType="text"
            android:layout_below="@+id/toolbarAddAlarm"
            android:textSize="24sp"
            android:textColorHint="?attr/app_hint"
            android:textColor="?attr/app_text"/>

    <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etAddAlarm"
            android:textColor="?attr/app_text"/>

    <Button
            android:id="@+id/btDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvDate"
            android:layout_marginTop="16dp"
            android:background="?attr/app_button"
            android:textColor="?attr/app_button_text_color"/>

    <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btDate"
            android:layout_marginTop="32dp"
            android:textColor="?attr/app_text"/>

    <Button
            android:id="@+id/btTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvTime"
            android:layout_marginTop="16dp"
            android:text="@string/choose_time"
            android:background="?attr/app_button"
            android:textColor="?attr/app_button_text_color"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            style="?android:attr/buttonBarButtonStyle">

        <Button
                android:id="@+id/btCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit"
                android:background="?attr/app_button"
                android:textColor="?attr/app_button_text_color"
                android:layout_marginEnd="2dp"
                style="?android:attr/buttonBarButtonStyle"/>

        <Button
                android:id="@+id/btSaveAlarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:layout_marginStart="2dp"
                android:background="?attr/app_button"
                android:textColor="?attr/app_button_text_color"
                style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
